<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10dp">

        <com.sccomponents.gauges.gr009.GR009 xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bmiMeter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:sccMaxValue="50"
            app:sccMinValue="0"
            app:sccText="BMI" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:columnCount="2"
            android:rowCount="6">

            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:paddingBottom="5dp"
                android:text="@string/classification_underlined"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/colorUnderweight"
                android:padding="2dp"
                android:text="@string/bmi_underweight"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/colorHealthyWeight"
                android:padding="2dp"
                android:text="@string/bmi_healthy_weight"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/colorOverweight"
                android:padding="2dp"
                android:text="@string/bmi_overweight"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/colorObese"
                android:padding="2dp"
                android:text="@string/bmi_obese"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_row="5"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/colorExtremeObese"
                android:padding="2dp"
                android:text="@string/bmi_extremely_obese"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:paddingBottom="5dp"
                android:text="@string/bmi_underlined"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@color/colorUnderweight"
                android:padding="2dp"
                android:text="@string/bmi_underweight_range"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@color/colorHealthyWeight"
                android:padding="2dp"
                android:text="@string/bmi_healthy_weight_range"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@color/colorOverweight"
                android:padding="2dp"
                android:text="@string/bmi_overweight_range"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_row="4"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@color/colorObese"
                android:padding="2dp"
                android:text="@string/bmi_obese_range"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_row="5"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@color/colorExtremeObese"
                android:padding="2dp"
                android:text="@string/bmi_extremely_obese_range"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </GridLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>