<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAutofill="no"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nav_view"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/profile"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/gender" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:labelFor="@+id/txtHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/height" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/txtHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="75dp"
                        android:gravity="end"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="5" />

                    <TextView
                        android:id="@+id/txtHeightUom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uom_imperial_length" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/goals"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:labelFor="@+id/txtStartingWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/starting_weight" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/txtStartingWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="75dp"
                        android:gravity="end"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="5" />

                    <TextView
                        android:id="@+id/txtStartingWeightUom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uom_imperial_weight" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:labelFor="@+id/txtDesiredWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desired_weight" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/txtDesiredWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="75dp"
                        android:gravity="end"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="5" />

                    <TextView
                        android:id="@+id/txtDesiredWeightUom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uom_imperial_weight" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/goal_date" />

                    <TextView
                        android:id="@+id/txtGoalDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:clickable="true"
                        android:onClick="onGoalDateClick"
                        android:text="@string/tap_to_select_date"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/progress_chart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_goal_line" />

                    <Switch
                        android:id="@+id/switchShowGoalLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:textOff="@string/no"
                        android:textOn="@string/yes" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_min_line" />

                    <Switch
                        android:id="@+id/switchShowMinLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:textOff="@string/no"
                        android:textOn="@string/yes" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_max_line" />

                    <Switch
                        android:id="@+id/switchShowMaxLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:textOff="@string/no"
                        android:textOn="@string/yes" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/other"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/unit_of_measure" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_imperial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onUnitOfMeasureClick"
                            android:text="@string/uom_imperial_weight_length" />

                        <RadioButton
                            android:id="@+id/radio_metric"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onUnitOfMeasureClick"
                            android:text="@string/uom_metric_weight_length" />
                    </RadioGroup>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/general"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about" />

                    <TextView
                        android:id="@+id/txtVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/version" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/backup_and_restore"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/last_backed_up" />

                    <TextView
                        android:id="@+id/txtLastBackedUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/never" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onBackupNowClick"
                    android:padding="10dp"
                    android:text="@string/backup_now"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onRestoreClick"
                    android:padding="10dp"
                    android:text="@string/restore"
                    android:textColor="@color/colorPrimaryDark" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/settings_bottom_nav_menu" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
