<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSelfie"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            android:contentDescription="@string/selfie_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="1">

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:text="@string/example_entry_date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:text="@string/example_entry_weight"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/txtWeightDelta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:layout_row="0"
                    android:layout_column="3"
                    android:layout_columnWeight="1"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnDelete"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:backgroundTintMode="screen"
                        android:src="@drawable/ic_delete_black"
                        android:contentDescription="@string/delete" />

                    <ImageButton
                        android:id="@+id/btnEdit"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:backgroundTintMode="screen"
                        android:src="@drawable/ic_edit_black"
                        android:contentDescription="@string/edit" />

                </LinearLayout>

            </GridLayout>

            <TextView
                android:id="@+id/txtNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/example_entry_notes"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>